# raite-data-registry

./: README.md  general_instructions.md  pyproject.toml
.dvc/: config
data/: .gitignore  crane-dataset.dvc  test_video.mp4.dvc
data/raite_2023/: .gitignore  cleaned_matches.dvc  dataset.dvc  metadata.dvc  samples.dvc
