[project]
name = "RAITE-data-registry"
version = "0.1.0"
description = "This dedicated repository tracks metadata created with DVC about datasets and models used in the Robust Artificial Intelligence Test Event (RAITE)"
authors = [
    {name = "Priscila Moreira", email = "pmoreira@nd.edu"},
]
dependencies = [
    "dvc[gdrive]",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
